--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
 	"version": "1",
 	"description": "tic tac toe js implementation",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"node-static": "^0.7.11",
 		"socket.io": "^4.5.4"
 	},
-	"scripts":{
-		"start":"node index.js"
+	"scripts": {
+		"start": "node index.js"
 	}
 }
