--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "tic tac toe js implementation",
 	"dependencies": {
 		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"node-static": "^0.7.11",
 		"socket.io": "^4.5.4"
